# StoryStream

./: .ci-ping  .clippy.toml  .gitattributes  .gitignore  Cargo.toml  README.md  STORYSTREAM_MASTER_STATUS.md  StoryStream-Detailed_Development_Roadmap  UPDATE.ps1  deny.toml  storystream.db
.github/workflows/: ci.yml  ping.yml  promote-on-ci.yml  promote-on-push.yml  promote.yml  rust-ci.yml  wake.yml  wake2.yml
crates/android-bridge/: Cargo.toml  build.rs
crates/android-bridge/src/: ffi.rs  lib.rs  library_bridge.rs  player_bridge.rs
crates/android-bridge/tests/: integration_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  player.rs  tui_mode.rs  ui.rs
crates/cli/src/commands/: tests.rs
crates/cli/tests/: position_persistence_tests
crates/config/: Cargo.toml  Makefile
crates/config/benches/: config_benchmarks.rs
crates/config/fuzz/: Cargo.toml
crates/config/fuzz/fuzz_targets/: config_parser.rs
crates/config/scripts/: verify.sh
crates/config/src/: app_config.rs  backup.rs  error.rs  lib.rs  library_config.rs  manager.rs  migration.rs  persistence.rs  player_config.rs  schema.rs  validation.rs  watcher.rs
crates/config/tests/: edge_case_tests.rs  integration_tests.rs  property_tests.rs  smoke_test.rs
crates/content-sources/: Cargo.toml
crates/content-sources/src/: archive.rs  lib.rs  librivox.rs  local.rs  traits.rs
crates/content-sources/tests/: librivox_tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/types/: book.rs  bookmark.rs  common.rs  metadata.rs  mod.rs  playback.rs  playlist.rs  stats.rs
crates/database/: Cargo.toml
crates/database/migrations/: 001_initial_schema.sql  002_add_indexes.sql  002_playlists.sql  003_full_text_search.sql  004_add_indexes.sql  005_populate_fts.sql
crates/database/src/: connection.rs  lib.rs  migrations.rs  search.rs
crates/database/src/queries/: bookmarks.rs  books.rs  chapters.rs  mod.rs  playback.rs  playlists.rs
crates/feed-parser/: Cargo.toml  FEED_PARSER_COMPLETE.md  README.md
crates/feed-parser/examples/: parse_feed.rs
crates/feed-parser/src/: error.rs  feed.rs  lib.rs  parser.rs
crates/feed-parser/tests/: integration_tests.rs  parser_tests.rs
crates/media-engine/: Cargo.toml  README.md  config.toml
crates/media-engine/src/: audio_device.rs  bookmarks.rs  chapters.rs  decoder.rs  engine.rs  equalizer.rs  error.rs  lib.rs  metrics.rs  output.rs  playback.rs  playback_thread.rs  resampler.rs  speed.rs  state.rs  types.rs
crates/media-engine/tests/: audio_device_tests.rs  audio_quality_tests.rs  engine_panic_safety_tests.rs  engine_syntax_test.rs  playback_integration_tests.rs  speed_tests.rs
crates/media-formats/: Cargo.toml  README.md
crates/media-formats/examples/: analyze_audio.rs
crates/media-formats/src/: capabilities.rs  detection.rs  error.rs  format.rs  lib.rs  mime.rs  properties.rs  quality.rs
crates/media-formats/tests/: integration_tests.rs
crates/network/: Cargo.toml
crates/network/examples/: advanced_download.rs  download_demo.rs  resume_demo.rs  simple_download.rs
crates/network/src/: client.rs  connectivity.rs  download.rs  download_manager.rs  error.rs  lib.rs  progress.rs  resume.rs  throttle.rs
crates/network/tests/: network_tests.rs
crates/resilience/: Cargo.toml
crates/resilience/examples/: resilience_demo.rs
crates/resilience/src/: circuit_breaker.rs  error.rs  lib.rs  rate_limiter.rs  retry.rs  timeout.rs
crates/resilience/tests/: resilience_tests.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/examples/: sync_demo.rs
crates/sync-engine/src/: conflict.rs  engine.rs  error.rs  lib.rs  protocol.rs  tracker.rs  types.rs
crates/sync-engine/tests/: sync_tests.rs
crates/tui/: Cargo.toml  README.md
crates/tui/examples/: fully_functional_demo.rs  integrated_tui.rs  tui_demo.rs
crates/tui/src/: app.rs  error.rs  events.rs  integration.rs  lib.rs  plugins.rs  state.rs  theme.rs
crates/tui/src/ui/: bookmarks.rs  help.rs  library.rs  mod.rs  player.rs  playlists.rs  search.rs  settings.rs  statistics.rs
crates/tui/tests/: integration_tests.rs  tab_navigation_tests.rs  tui_tests.rs
crates/wear-bridge/: Cargo.toml
docs/: chapter-navigation.md
examples/: audio_device_demo.rs  list_audio_devices.rs
scripts/: autosync.ps1
