[package]
name = "storystream-android-bridge"
version = "0.1.0"
edition = "2021"
authors = ["DrTom"]
description = "Android JNI bridge for StoryStream audiobook player"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# JNI bindings for Android
jni = "0.21"

# Lazy static initialization
once_cell = "1.19"

# Android logging (conditional on target)
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# Build script to emit warnings for non-Android builds
[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android", "i686-linux-android"]