[package]
name = "storystream-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "storystream"
path = "src/main.rs"

[dependencies]
media-engine = { path = "../media-engine" }
storystream-config = { path = "../config" }
storystream-core = { path = "../core" }
storystream-database = { path = "../database" }
storystream-library = { path = "../library" }
storystream-sync-engine = { path = "../sync-engine" }
storystream-network = { path = "../network" }
storystream-content-sources = { path = "../content-sources" }
storystream-tui = { path = "../tui" }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.28"
console = "0.16.1"

[dev-dependencies]
tempfile = "3.23"