[package]
name = "storystream-content-sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storystream-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
