[package]
name = "storystream-content-sources"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storystream-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
tempfile = "3.23.0"
sqlx = "0.9.0-alpha.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }