[package]
name = "storystream-database"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

# Core types
storystream-core = { path = "../core" }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
tempfile = "3.23.0"
migrations = "0.2.2"

[dev-dependencies]
tempfile = "3.14"