[package]
name = "storystream-feed-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# For tests