[package]
name = "storystream-feed-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
# NEVER UPDATE QUICK-XML VERSION WITHOUT CHECKING COMPATIBILITY WITH MEDIA-ENGINE
# Media-engine also depends on quick-xml, and mismatched versions can cause build errors.
# As of June 2024, media-engine uses quick-xml 0.36.2 - This is the ONLY version that should be used here.
quick-xml = { version = "0.36.2", features = ["serialize"] }
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[[example]]
name = "parse_feed"
path = "examples/parse_feed.rs"