# FILE: crates/media-engine/Cargo.toml

[package]
name = "media-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
storystream-core = { path = "../core" }
storystream-media-formats = { path = "../media-formats" }

# Audio processing
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
rubato = "0.16"

# Async
tokio = { version = "1.41", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Utilities
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.23.0"