# crates/media-engine/Cargo.toml

[package]
name = "media-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
storystream-core = { path = "../core" }
storystream-media-formats = { path = "../media-formats" }

# Audio processing
symphonia = { version = "0.5.5", features = ["all"] }
cpal = "0.16.0"
rubato = "1.0.0-preview.0"

# Async
tokio = { version = "1.48.0", features = ["full"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
log = "0.4.28"

# Utilities
crossbeam-channel = "0.5.15"
md5 = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23.0"
