# FILE: Cargo.toml

[package]
name = "storystream-media-formats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mime = "0.3.17"
# No external dependencies needed for format detection
# In the future, could add symphonia for deeper format inspection

[dev-dependencies]
tempfile = "3.23.0"