# FILE: crates/media-formats/Cargo.toml

[package]
name = "storystream-media-formats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Audio decoding and format detection
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }

# Utility
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"