[package]
name = "storystream-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storystream-resilience = { path = "../resilience" }
thiserror = "2.0.17"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
tokio = { version = "1.42", features = ["fs", "io-util", "macros", "rt"] }
bytes = "1.5"
futures = "0.3"
tempfile = "3.23.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
mockito = "1.2"