[package]
name = "storystream-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storystream-resilience = { path = "../resilience" }
reqwest = { version = "0.12.24", features = ["stream", "json"] }
tokio = { version = "1.48.0", features = ["fs", "time", "sync", "macros", "rt-multi-thread"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
bytes = "1.10.1"
thiserror = "2.0.17"
log = "0.4.28"

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4.4"
env_logger = "0.11.8"