[package]
name = "storystream-sync-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storystream-core = { path = "../core" }
storystream-resilience = { path = "../resilience" }
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }