[package]
name = "storystream-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
media-engine = { path = "../media-engine" }
storystream-config = { path = "../config" }
storystream-core = { path = "../core" }
storystream-database = { path = "../database" }
storystream-library = { path = "../library" }
storystream-sync-engine = { path = "../sync-engine" }

ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0.17"
chrono = "0.4"
unicode-width = "0.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"