[package]
name = "storystream-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
media-engine = { path = "../media-engine" }
storystream-config = { path = "../config" }
storystream-core = { path = "../core" }
storystream-database = { path = "../database" }
storystream-library = { path = "../library" }
storystream-sync-engine = { path = "../sync-engine" }

ratatui = "0.28.1"
crossterm = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
chrono = "0.4.42"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3.23"

[[example]]
name = "tui_demo"
path = "examples/tui_demo.rs"

[[example]]
name = "fully_functional_demo"
path = "examples/fully_functional_demo.rs"