[package]
name = "storystream-config-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
storystream-config = { path = ".." }
toml = "0.8"

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
test = false
doc = false